# gter54

./: README.md  pyproject.toml
containerlab/: gter54.clab.yaml
netbox-data-source/config-context/: ospf.json
netbox-data-source/intended/: sp1-srlinux-pe-101.cfg  sp2-srlinux-pe-102.cfg  sp3-srlinux-pe-103.cfg
netbox-data-source/scripts/: generate_intended.py
netbox-data-source/templates/: nokia.j2
nuts/: nr-config.yaml  pytest.ini
nuts/custom_tests/: sr_linux_ospf_napalm.py  sr_linux_ping_napalm.py
nuts/inventory/: defaults.yaml  groups.yaml  hosts.yaml
nuts/tests/icmp/: test_sr1_loopback_to_sr2.yaml  test_sr1_loopback_to_sr3.yaml  test_sr1_to_sr2_p2p.yaml  test_sr1_to_sr3_p2p.yaml  test_sr2_loopback_local.yaml  test_sr2_loopback_to_sr1.yaml  test_sr2_loopback_to_sr3.yaml  test_sr2_to_sr1_p2p.yaml  test_sr2_to_sr3_p2p.yaml  test_sr3_loopback_local.yaml  test_sr3_loopback_to_sr1.yaml  test_sr3_loopback_to_sr2.yaml  test_sr3_to_sr1_p2p.yaml
nuts/tests/interfaces/: test_sr_interfaces.yaml
nuts/tests/ospf/: test_sr1_ospf_neighbors.yaml  test_sr2_ospf_neighbors.yaml  test_sr3_ospf_neighbors.yaml
workflows/: deploy.yml  validation.yml
